k8s-nginx/svc.yml
apiVersion: v1
kind: Service
metadata:
    name: nginx-svc
spec:
    type: LoadBalancer
    selector:
        app: nginx-app
    ports:
      - port: 5000
        targetPort: 80
        protocol: TCP
